Update: Replace HIVRA with Hivra, add custom SVG icons for starters, improve visual design

--- a/404.html
+++ b/404.html
@@ -56,7 +56,7 @@
             <a href="/" class="logo">
                 <picture>
                     <source srcset="pictures/logo.webp" type="image/webp">
-                    <img src="pictures/logo.png" alt="HIVRA" class="logo-img" width="32" height="32">
+                    <img src="pictures/logo.png" alt="HIVRA" class="logo-img" style="width: 80px; height: auto;" width="32" height="32">
                 </picture>
             </a>
             <nav class="nav">
