--- a/support.html
+++ b/support.html
@@ -212,7 +212,7 @@
     <header class="header">
         <div class="header-container">
             <a href="index.html" class="logo">
-                <img src="pictures/logo.png" alt="HIVRA" class="logo-img">
+                <img src="pictures/logo.png" alt="HIVRA" class="logo-img" style="width: 80px; height: auto;">
             </a>
             <nav class="nav">
                 <a href="index.html" class="nav-link">Home</a>
